# vasprunrs

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark.py  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: delta_dos_example.py
python/vasprunrs/: __init__.py  cli.py  pymatgen.py  vasprunrs.pyi
scripts/: benchmark.py  benchmark_vasprun_parsing.py  install-hooks.sh  plot_bands.py  profile_vasprun.py
scripts/hooks/: pre-push
src/: error.rs  lib.rs  python.rs  types.rs
src/parser/: atominfo.rs  calculation.rs  dielectric.rs  dos.rs  eigenvalues.rs  helpers.rs  incar.rs  kpoints.rs  mod.rs  structure.rs
tests/: integration.rs  si_rpa.xml  test_pymatgen_shim.py
